# agi-experiment

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  base.py  evaluate.py  interactive_dashboard.py  mnist_loader.py  quick_sweep.py  representation_tests.py  sweep.py  sweep_energy.py
benchmarks/approaches/: __init__.py  architecture_exploration.md  backprop_mlp.py  dfa_v20.py  ff_enhanced.py  forward_forward.py  forward_forward_v2_long.py  hybrid_v17_ff_sc.py  hybrid_v18_soft_fusion.py  hybrid_v19_compose.py  predictive_coding.py  sparse_coding_v10_tta.py  sparse_coding_v11_fista.py  sparse_coding_v12_discrim.py  sparse_coding_v13_wide.py  sparse_coding_v14_ensemble.py  sparse_coding_v15_cosine.py  sparse_coding_v16_pca_init.py  sparse_coding_v2_89pct.py  sparse_coding_v4_927pct.py  sparse_coding_v5_energy.py  sparse_coding_v6_incoherent.py  sparse_coding_v7_energy.py  sparse_coding_v8_hierarchical.py  sparse_coding_v9_augmented.py
benchmarks/results/: benchmark_results.json  representation_tests.json
experiments/causal_dictionaries/: analysis.py  architectures.py  event_encoding.py  learned_encoder.py  micro_world.py  run.py  sparse_dictionary.py  visualize_world.py
src/brain_sim/: __init__.py  encoding.py  layers.py  learning.py  network.py  neuron.py  spike_net.py  synapse.py
tests/: conftest.py  test_causal_dictionaries.py  test_forward_forward.py  test_learning.py  test_network.py  test_neuron.py  test_spike_net.py  test_synapse.py
(+2 files in other folders)
