[project]
name = "agi-experiment"
version = "0.1.0"
description = "Emergent composable causal primitives from unsupervised sparse dictionary learning on raw physical events"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["causal-learning", "sparse-coding", "compositionality", "unsupervised-learning", "emergent-abstraction", "dictionary-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_sim"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src/brain_sim"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "optuna>=4.7.0",
    "plotly>=6.5.2",
]
